--- a/bounties.html
+++ b/bounties.html
@@ -31,7 +31,7 @@
             <div class="program-item">
                 <h3>Program 2</h3>
                 <p>Description of the bounty program.</p>
-                <a href="#">Join Now</a>
+                <a href="#">Join Noww</a>
             </div>
             <!-- Add more bounty programs here -->
         </div>
